Modified: SQLEntityGenerator.java